fix: Fix mobile overflow-x (#1688)

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -24,7 +24,7 @@
     left: 0;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 100%;
+    width: 100vw;
     height: 6rem;
   }
 
